feat: added scan login screen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'comiru' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
 
 
   target 'comiruTests' do
