--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,11 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
 
 platform :ios, '10.0'
 
 target 'comiru' do
+  use_unimodules!
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
@@ -24,14 +26,5 @@ target 'comiru' do
   use_flipper!
   post_install do |installer|
     flipper_post_install(installer)
-  end
-end
-
-target 'comiru-tvOS' do
-  # Pods for comiru-tvOS
-
-  target 'comiru-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
   end
 end
