--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/progress-bar-android": "^1.0.4",
     "@react-native-community/progress-view": "^1.2.3",
     "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/material-bottom-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo-media-library": "^10.0.0",
@@ -22,6 +23,7 @@
     "react-native": "0.63.4",
     "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-paper": "^4.6.0",
     "react-native-pdf": "^6.2.2",
     "react-native-permissions": "^3.0.0",
     "react-native-qrcode-scanner": "^1.5.1",
